--- a/boot script.html
+++ b/boot script.html
@@ -14,9 +14,10 @@
     <button id="n" onclick="boot(this)">No</button>
 
 
+
     <script>
         var input = document.getElementById("input1");
-        var boot = document.getElementById("bootText");
+        var boot1 = document.getElementById("bootText");
         var network = document.getElementById("network");
         var cdRom = document.getElementById("cdRom");
         var clickY = document.getElementById("y");
@@ -27,11 +28,11 @@
             var input = input1;
 
             network.style.display = "none";
-            cdRoom.style.display = "none";
+            cdRom.style.display = "none";
             clickY.style.display = "none";
             clickN.style.display = "none";
             input.innerHTML = "press f1";
-
+            console.log(load);
         }
 
         function boot(bootmenu) {
@@ -39,34 +40,35 @@
             if (bootmenu == bootText) {
                 bootText.style.display = "none";
                 network.style.display = "initial";
-                cdRoom.style.display = "initial";
+                cdRom.style.display = "initial";
             }
             if (bootmenu == network) {
-                input1.innerHTML = "booting from network";
+                input.innerHTML = "booting from network";
                 cdRom.style.display = "none";
                 network.style.display = "none";
-                setTimeout(function () { input1.innerHTML = 'Booted from network' }, 3000);
+                setTimeout(function () { input.innerHTML = 'Booted from network' }, 3000);
             }
-            if (bootmenu == cdRoom) {
-                input1.innerHTML = 'boot from cd rom';
+            if (bootmenu == cdRom) {
+                input.innerHTML = 'boot from cd rom';
                 cdRom.style.display = "none";
                 network.style.display = "none";
                 clickY.style.display = "initial";
                 clickN.style.display = "initial";
             }
             if (bootmenu == clickY) {
-                input1.innerHTML = "booting from CD-ROM";
-                setTimeout(function () { input1.innerHTML = 'booted from CD-ROM' }, 3000);
+                input.innerHTML = "booting from CD-ROM";
+                setTimeout(function () { input.innerHTML = 'booted from CD-ROM' }, 3000);
                 clickY.style.display = "none";
                 clickN.style.display = "none";
             }
             if (bootmenu == clickN) {
-                input1.innerHTML = "no boot type selected, booting from default";
-                setTimeout(function () { input1.innerHTML = 'booted from CD-ROM' }, 6000);
+                input.innerHTML = "no boot type selected, booting from default";
+                setTimeout(function () { input.innerHTML = 'booted from CD-ROM' }, 6000);
                 clickY.style.display = "none";
                 clickN.style.display = "none";
             }
+        }
 
- </script>
+    </script>
 </body>
 </html>
